--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ cache: pip
 
 env:
   matrix:
+    - MOLECULE_DISTRO: ubuntu20
+    - MOLECULE_DISTRO: ubuntu18
     - MOLECULE_DISTRO: debian10
     - MOLECULE_DISTRO: debian9
 
